--- a/src/ca/goldorion/mcrpcreator/ui/BlockOverview.fxml
+++ b/src/ca/goldorion/mcrpcreator/ui/BlockOverview.fxml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-
+<?import javafx.scene.layout.*?>
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.goldorion.mcrpcreator.ui.BlockOverviewController">
    <children>
       <SplitPane dividerPositions="0.5" prefHeight="720.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -37,20 +28,23 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Label prefHeight="90.0" prefWidth="331.0" text="File name" />
-                        <Label fx:id="fileNameLabel" prefHeight="113.0" prefWidth="572.0" text="Label" GridPane.columnIndex="1" />
+                        <Label fx:id="fileNameLabel" prefHeight="113.0" prefWidth="572.0" text="None" GridPane.columnIndex="1" />
                         <Label prefHeight="164.0" prefWidth="612.0" text="Text" GridPane.rowIndex="1" />
-                        <Label fx:id="textLabel" prefHeight="139.0" prefWidth="614.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label prefHeight="184.0" prefWidth="937.0" text="Type" GridPane.rowIndex="2" />
-                        <Label fx:id="typeLabel" prefHeight="319.0" prefWidth="610.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label prefHeight="90.0" prefWidth="344.0" text="Colour" GridPane.rowIndex="3" />
-                        <Label fx:id="colourLabel" prefHeight="202.0" prefWidth="568.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Label prefHeight="197.0" prefWidth="635.0" text="Toolbox" GridPane.rowIndex="4" />
-                        <Label fx:id="toolboxLabel" prefHeight="165.0" prefWidth="624.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label prefHeight="241.0" prefWidth="805.0" text="Dependencies" GridPane.rowIndex="5" />
-                        <Label fx:id="dependenciesLabel" prefHeight="235.0" prefWidth="625.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label fx:id="textLabel" prefHeight="139.0" prefWidth="614.0" text="None" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label prefHeight="184.0" prefWidth="937.0" text="Type" GridPane.rowIndex="3" />
+                        <Label fx:id="typeLabel" prefHeight="319.0" prefWidth="610.0" text="None" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label prefHeight="90.0" prefWidth="344.0" text="Colour" GridPane.rowIndex="4" />
+                        <Label fx:id="colourLabel" prefHeight="202.0" prefWidth="568.0" text="None" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Label prefHeight="197.0" prefWidth="635.0" text="Toolbox" GridPane.rowIndex="5" />
+                        <Label fx:id="toolboxLabel" prefHeight="165.0" prefWidth="624.0" text="None" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                        <Label prefHeight="241.0" prefWidth="805.0" text="Dependencies" GridPane.rowIndex="6" />
+                        <Label fx:id="dependenciesLabel" prefHeight="235.0" prefWidth="625.0" text="None" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                        <Label prefHeight="153.0" prefWidth="509.0" text="Extensions" GridPane.rowIndex="2" />
+                        <Label fx:id="extensionsLabel" prefHeight="163.0" prefWidth="466.0" text="None" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      </children>
                   </GridPane>
                   <ButtonBar layoutX="9.0" layoutY="664.0" prefHeight="40.0" prefWidth="609.0" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="17.0">
