--- a/src/ca/goldorion/mcrpcreator/ui/BlockOutputEditDialog.fxml
+++ b/src/ca/goldorion/mcrpcreator/ui/BlockOutputEditDialog.fxml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+
 <AnchorPane prefHeight="555.0" prefWidth="617.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.goldorion.mcrpcreator.ui.BlockOuputEditDialogController">
    <children>
       <GridPane layoutX="14.0" layoutY="14.0" prefHeight="502.0" prefWidth="593.0">
@@ -24,7 +33,7 @@
             <Label prefHeight="341.0" prefWidth="518.0" text="Message" GridPane.rowIndex="1" />
             <TextField fx:id="textField" prefHeight="45.0" prefWidth="339.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label prefHeight="298.0" prefWidth="551.0" text="Type" GridPane.rowIndex="3" />
-            <TextField fx:id="typeField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ChoiceBox fx:id="typeChoiceBox" prefHeight="44.0" prefWidth="214.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label prefHeight="114.0" prefWidth="245.0" text="Colour" GridPane.rowIndex="4" />
             <TextField fx:id="colourField" prefHeight="26.0" prefWidth="302.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <Label prefHeight="234.0" prefWidth="493.0" text="Toolbox ID" GridPane.rowIndex="5" />
