--- a/src/ca/goldorion/mcrpcreator/ui/blocks/BlockOutputEditDialog.fxml
+++ b/src/ca/goldorion/mcrpcreator/ui/blocks/BlockOutputEditDialog.fxml
@@ -5,27 +5,28 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="598.0" prefWidth="619.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.goldorion.mcrpcreator.ui.blocks.BlockOuputEditDialogController">
+<AnchorPane prefHeight="910.0" prefWidth="701.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.goldorion.mcrpcreator.ui.blocks.BlockOutputEditDialogController">
    <children>
-      <GridPane layoutX="11.0" layoutY="14.0" prefHeight="529.0" prefWidth="596.0">
+      <GridPane layoutX="11.0" layoutY="14.0" prefHeight="849.0" prefWidth="678.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="506.0" minWidth="10.0" prefWidth="155.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="577.0" minWidth="10.0" prefWidth="450.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="506.0" minWidth="10.0" prefWidth="146.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="577.0" minWidth="10.0" prefWidth="531.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="63.0" minHeight="10.0" prefHeight="47.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="87.0" minHeight="0.0" prefHeight="59.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="87.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="152.0" minHeight="10.0" prefHeight="68.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="146.0" minHeight="10.0" prefHeight="63.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="107.0" minHeight="0.0" prefHeight="52.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="110.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="310.0" minHeight="10.0" prefHeight="310.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="234.0" minHeight="10.0" prefHeight="79.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="185.0" minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="149.0" minHeight="0.0" prefHeight="76.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="110.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="164.0" minHeight="10.0" prefHeight="129.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -66,21 +67,79 @@
             <Button mnemonicParsing="false" onAction="#handleEditExtensions" prefHeight="44.0" prefWidth="149.0" text="Edit Extensions" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label prefHeight="122.0" prefWidth="213.0" text="Arguments" GridPane.rowIndex="2" />
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
+               <columnConstraints>
+                  <ColumnConstraints />
+               </columnConstraints>
                <children>
-                  <Button mnemonicParsing="false" prefHeight="38.0" prefWidth="151.0" text="See Input Value List" />
-                  <Label prefHeight="127.0" prefWidth="339.0" text="Not implemented yet" GridPane.columnIndex="1" />
+                  <GridPane prefHeight="350.0" prefWidth="562.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <GridPane>
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints maxHeight="236.0" minHeight="10.0" prefHeight="236.0" vgrow="SOMETIMES" />
+                            <RowConstraints maxHeight="149.0" minHeight="10.0" prefHeight="74.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <ListView fx:id="argList" prefHeight="236.0" prefWidth="246.0" />
+                              <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                <buttons>
+                                  <Button mnemonicParsing="false" onAction="#handleNewArg" prefHeight="43.0" prefWidth="220.0" text="New" />
+                                    <Button mnemonicParsing="false" onAction="#handleEditArg" prefHeight="42.0" text="Edit" />
+                                    <Button mnemonicParsing="false" prefHeight="42.0" text="Delete" />
+                                </buttons>
+                              </ButtonBar>
+                           </children>
+                        </GridPane>
+                        <GridPane GridPane.columnIndex="1">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="128.0" minWidth="10.0" prefWidth="78.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0" minWidth="10.0" prefWidth="187.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <ChoiceBox fx:id="argTypeChoiceBox" prefHeight="42.0" prefWidth="209.0" GridPane.columnIndex="1" />
+                              <Label prefHeight="142.0" prefWidth="228.0" text="Type" />
+                              <Label prefHeight="103.0" prefWidth="87.0" text="Name" GridPane.rowIndex="1" />
+                              <TextField fx:id="argNameField" prefHeight="41.0" prefWidth="198.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <CheckBox fx:id="argChecked" mnemonicParsing="false" prefHeight="58.0" prefWidth="233.0" text="Checked" />
+                                    <ChoiceBox fx:id="checkArgChoiceBox" prefWidth="150.0" GridPane.rowIndex="1" />
+                                 </children>
+                              </GridPane>
+                              <Label prefHeight="119.0" prefWidth="135.0" text="Specific" GridPane.rowIndex="2" />
+                           </children>
+                        </GridPane>
+                     </children>
+                  </GridPane>
                </children>
             </GridPane>
          </children>
       </GridPane>
-      <ButtonBar layoutX="221.0" layoutY="539.0" prefHeight="45.0" prefWidth="178.0">
+      <ButtonBar layoutX="261.0" layoutY="863.0" prefHeight="45.0" prefWidth="178.0">
         <buttons>
             <Button mnemonicParsing="false" onAction="#handleOk" text="OK" />
           <Button mnemonicParsing="false" onAction="#handleCancel" text="Cancel" />
