--- a/src/ca/goldorion/mcrpcreator/ui/BlockOverview.fxml
+++ b/src/ca/goldorion/mcrpcreator/ui/BlockOverview.fxml
@@ -3,9 +3,11 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -40,6 +42,35 @@
                       <Button mnemonicParsing="false" onAction="#handleDeleteBlock" text="Delete" />
                     </buttons>
                   </ButtonBar>
+                  <GridPane layoutX="4.0" prefHeight="607.0" prefWidth="622.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="311.0" minWidth="10.0" prefWidth="157.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="465.0" minWidth="10.0" prefWidth="465.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label prefHeight="109.0" prefWidth="237.0" text="ID" />
+                        <Label prefHeight="108.0" prefWidth="222.0" text="Minimal Version" GridPane.rowIndex="1" />
+                        <Label prefHeight="139.0" prefWidth="309.0" text="Name" GridPane.rowIndex="2" />
+                        <Label prefHeight="122.0" prefWidth="261.0" text="Description" GridPane.rowIndex="3" />
+                        <Label prefHeight="140.0" prefWidth="314.0" text="Version" GridPane.rowIndex="4" />
+                        <Label prefHeight="110.0" prefWidth="229.0" text="Author" GridPane.rowIndex="5" />
+                        <TextField fx:id="pluginId" GridPane.columnIndex="1" />
+                        <TextField fx:id="pluginMin" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="pluginName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="pluginDesc" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="pluginVersion" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <TextField fx:id="pluginAuthor" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                     </children>
+                  </GridPane>
+                  <Button layoutX="314.0" layoutY="607.0" mnemonicParsing="false" onAction="#handleSavePluginInfoButton" text="Save" />
                </children>
                <cursor>
                   <Cursor fx:constant="DEFAULT" />
